--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@noble/curves": "^2.0.1",
     "@noble/hashes": "^2.0.1",
+    "express": "^5.2.1",
     "ipaddr.js": "^2.3.0"
   }
 }
